[project]
dynamic = ["version"]
name = "bussinwebx-get"
dependencies = [
  "requests",
  "json"
]
requires-python = ">= 3.8"
maintainers = [
  {name = "The Odd Cell"}
]
description = "Be able to make GET requests to buss:// websites and get IPs for buss:// websites."
readme = "README.md"
license = {text = "MIT License"}
keywords = ["webx", "buss", "facedev"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: API",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
]
[project.urls]
Repository = "https://github.com/TheOddCell/bussinwebx-get.git"
Issues = "https://github.com/TheOddCell/bussinwebx-get/issues"
